--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   equatable: ^2.0.7
   json_annotation: ^4.9.0
   flutter_launcher_icons: ^0.14.4
+  share_plus: ^12.0.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
